fixed after lecture

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1401_熱と温度",
       "provenance": [],
-      "authorship_tag": "ABX9TyO08rZSO9cRqx5Yn2FMObrX",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO16IFKAWSEEkV47ZrqaH15",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +93,12 @@
       "source": [
         "![図1　熱の移動と熱平衡](https://i0.wp.com/studyphys.com/wp-content/uploads/2018/11/thermal-equilibrium.png?w=1240&ssl=1)\n",
         "\n",
+        "\n",
+        "> 図の中の「Bが失う熱量 $Q_{\\rm B}$」は間違い,  **「Bが得る熱量」** です\n",
+        "\n",
+        ">> 他に熱の逃げ場がなければ，**熱量保存則**   \n",
+        ">> $$\\left( -Q_{\\rm A} \\right) + \\left( + Q_{\\rm A} \\right)  =0$$  \n",
+        ">> が成り立ちます\n",
         "---\n",
         "- [Dr.あゆみの物理教室](https://studyphys.com/conservation-of-heat/)\n"
       ]
@@ -114,7 +121,7 @@
         "\n",
         "( 左図では $t_{\\rm High} = 70{\\rm\\  {}^\\circ C},\n",
         "t_{\\rm Low} = 5{\\rm\\  {}^\\circ C},\n",
-        "t = 30{\\rm\\  {}^\\circ C} $)\n",
+        "t = 30{\\rm\\  {}^\\circ C} $, ただし高温物質と低温物質に極端な量の差ないと仮定)\n",
         "\n",
         "---\n",
         "[Weighing scale](https://en.wikipedia.org/wiki/Weighing_scale),  [Physics Classroom - Home](https://www.physicsclassroom.com/class/thermalP/Lesson-1/What-is-Heat)"
@@ -127,23 +134,6 @@
       },
       "source": [
         "#### 熱力学の第ゼロ法則 / Zeroth law of thermodynamics"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Grl4-G1UqPhg"
-      },
-      "source": [
-        "\\begin{align*}\n",
-        "T_{\\rm A} &= T_{\\rm B}&\\\\\n",
-        "&& T_{\\rm B}  &= T_{\\rm C}& \\\\\n",
-        "\\end{align*}\n",
-        "\n",
-        "\\begin{align*}\n",
-        "T_{\\rm A} &= T_{\\rm C}\n",
-        "\\end{align*}\n",
-        "\n"
       ]
     },
     {
@@ -312,10 +302,19 @@
         "- 水の沸点 := $100 {}^\\circ {\\rm C}$\n",
         "\n",
         "\n",
-        "##### 絶対温度, 摂氏温度 / absolute temperature, $T$: ${\\rm K}$\n",
+        "##### 絶対温度 / absolute temperature, $T$: ${\\rm K}$\n",
         "\n",
         "- ボイル-シャルルの法則を利用  \n",
         "  理想気体の体積(Volume, $V$)と温度(temperature, $T$)の関係を利用. 後述\n",
+        "\n",
+        "\n",
+        "#### 摂氏温度 と 絶対温度 の目盛間隔\n",
+        "\n",
+        "後述しますが，\n",
+        "\\begin{align*}\n",
+        "\\Delta t = \\Delta T\n",
+        "\\end{align*}\n",
+        "つまり，目盛幅は等しいです.\n",
         "\n"
       ]
     },
@@ -432,7 +431,7 @@
         "\n",
         "![Properties of water](https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Phase_diagram_of_water_simplified.svg/500px-Phase_diagram_of_water_simplified.svg.png)\n",
         "\n",
-        "- 水は 約4℃ で体積が極大になるため, SL曲線に特徴(傾き負)が出る\n",
+        "- 水は 約4℃ で密度が極大になるため, SL曲線に特徴(傾き負)が出る\n",
         "\n",
         "---\n",
         "[Properties of water](https://en.wikipedia.org/wiki/Properties_of_water#Density_of_water_and_ice), [Triple point](https://en.wikipedia.org/wiki/Triple_point), [Water Phase Diagram](http://www1.lsbu.ac.uk/water/water_phase_diagram.html)\n"
@@ -461,24 +460,26 @@
       "metadata": {
         "id": "5NkiG4K-IZ7j",
         "cellView": "form",
-        "outputId": "89a7eaff-40e8-45c3-8832-87173ac9ec02",
+        "outputId": "7f962671-b78e-4609-b5ba-52c3a4638e98",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 625
+          "height": 475
         }
       },
       "source": [
         "#@title 熱運動の基本\n",
         "%%html\n",
-        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_\n",
+        "en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_\n",
+              "en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -495,24 +496,24 @@
       "metadata": {
         "id": "oneCy4t_JAFD",
         "cellView": "form",
-        "outputId": "def03733-0f8c-4a58-c3c1-02cca3b69cad",
+        "outputId": "976f14fd-09fe-4b3e-c8be-1d28458abc3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 625
+          "height": 475
         }
       },
       "source": [
         "#@title 熱運動(P,V,T)\n",
         "%%html\n",
-        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -539,7 +540,7 @@
         "id": "UHlXyAtZKi1g"
       },
       "source": [
-        "> 分子一個の力学的エネルギー** = 分子一個の_運動エネルギー_ + 他の分子や環境による _位置エネルギー_\n",
+        "> 分子一個の力学的エネルギー = 分子一個の_運動エネルギー_ + 他の分子や環境による _位置エネルギー_\n",
         "\n",
         ">> **分子一個の全エネルギー** = 分子一つの _運動エネルギー_ + (相互作用による) _ポテンシャルエネルギー_\n",
         "\n",
@@ -547,7 +548,7 @@
         "\\varepsilon_i  &=  k_i + u_{ij}&\n",
         "\\end{align*}\n",
         "\n",
-        "**内部エネルギー**:: $\\varepsilon_i$ 注目する物質全体個数だけ足し合わせたもの\n",
+        "**内部エネルギー**:: $U$ 注目する物質全体個数だけ足し合わせたもの\n",
         "\n",
         "\\begin{align*}\n",
         "U &= \\sum \\varepsilon_i  = \\sum_{i}  k_i + \\sum_{i,j(\\neq i)}   u_{ij}&\n",
@@ -561,24 +562,24 @@
       "metadata": {
         "id": "OkaGV387NNAi",
         "cellView": "form",
-        "outputId": "0bda2467-3ae0-420a-877f-94b83d2d592d",
+        "outputId": "791e1082-7572-4e31-a0f5-5270f4d646a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 625
+          "height": 475
         }
       },
       "source": [
         "#@title 熱: エネルギーの移動形態\n",
         "%%html\n",
-        "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+        "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+              "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -809,7 +810,7 @@
         "#### モル熱容量\n",
         "\n",
         "熱容量を, 原子や分子の基本個数 Avogadro 定数 $N_{\\rm A} = 6.02\\times 10^{23}$  \n",
-        "つまり 1 mol を基準とした熱容量を **モル比熱容量**  $c_n$といいます.\n",
+        "つまり 1 mol を基準とした熱容量を **モル熱容量**  $c_n$といいます.\n",
         "\n",
         "目する物体の物質量を $n$, その熱容量が $C$ ならば\n",
         "\\begin{align*}\n",
@@ -824,13 +825,30 @@
       },
       "source": [
         "一般的な金属の $c_n$ は, 気体定数を $R=8.31 {\\rm \\ J/mol.K}$ とすると  \n",
-        "常温では $c_n=3R=24.94 {\\rm \\ J/mol.K}$ となることが, 統計力学を利用することで導出できる.\n",
+        "常温では $c_n=3R=24.94 {\\rm \\ J/mol.K}$ となることが, 統計力学をから導出できる.\n",
         "\n",
         "低温では、教科書 p159 図14.5 のようにそれよりも小さな値を示す.\n",
-        "このような変化も量子力学と統計力学を融合することである程度再現できる.\n",
+        "このような変化も量子力学と統計力学を融合することほぼ再現できる.\n",
         "\n",
         "---\n",
         "[Specific heats and molar heat capacities for various substances at 20 C](http://hyperphysics.phy-astr.gsu.edu/hbase/Tables/sphtt.html)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "15xx015oldXn"
+      },
+      "source": [
+        "#### 潜熱/転移熱の一般的な単位: ${\\rm J/g, \\ cal/g}$\n",
+        "\n",
+        "潜熱は顕熱のように温度変化に比例していないが, その物体の質量に依存する.\n",
+        "物体の質量を $m$ g とし, この物体を相変化させるために必要な熱量を $\\Delta Q$ とすると, 潜熱 $H_L$ は\n",
+        "\n",
+        "\\begin{align*}\n",
+        "\\Delta Q &= m \\cdot H_{L}&\\\\\n",
+        "H_{L} & = \\dfrac{\\Delta Q}{m}&\n",
+        "\\end{align*}"
       ]
     },
     {
@@ -874,15 +892,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wWTYw8r0lf_5"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -1011,7 +1020,7 @@
         "\\Delta L &\\propto L_0\\cdot\\Delta T&\\\\\n",
         "\\Delta L &= \\alpha \\cdot L_0\\cdot\\Delta T&\n",
         "\\end{align*}\n",
-        "> $(3.3) \\quad \\Delta L = \\alpha \\cdot L_0\\cdot\\Delta T$\n",
+        "> $(14.3) \\quad \\Delta L = \\alpha \\cdot L_0\\cdot\\Delta T$\n",
         "\n",
         "$\\alpha$ を **線膨張率** という. 単位は $\\alpha = \\frac{\\Delta L}{L_0 \\Delta T}$ より ${\\rm K^{-1}}$ です.   \n",
         "温度差 $\\Delta T$ に依存するので ${\\rm {}^\\circ C^{-1}}$ とも表記できます."
@@ -1027,7 +1036,7 @@
         "\n",
         "**三**次元の立方体を考慮することで線膨張率と同様の議論が可能で\n",
         "\n",
-        "> $(3.5) \\qquad \\Delta V = \\beta\\cdot V_0 \\cdot \\Delta T$\n",
+        "> $(14.5) \\qquad \\Delta V = \\beta\\cdot V_0 \\cdot \\Delta T$\n",
         "\n",
         "ここで $V_0$ は元の体積, $\\Delta V$ は体積の増加分です. また\n",
         ">> $\\quad \\beta = 3 \\alpha$\n",
