Colaboratory を使用して作成しました

--- a/10_Oct/1402_熱の移動.ipynb
+++ b/10_Oct/1402_熱の移動.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1402_熱の移動.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeKIcFpUZ80HDtKjbWEfl5",
+      "authorship_tag": "ABX9TyP+SIc+m6j8CYwY91kU0/No",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2B_yZQM-OJp3",
-        "colab_type": "text"
+        "id": "2B_yZQM-OJp3"
       },
       "source": [
         "# 熱"
@@ -37,8 +36,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mTgJYFsCOL8Z",
-        "colab_type": "text"
+        "id": "mTgJYFsCOL8Z"
       },
       "source": [
         "## 熱の移動"
@@ -47,28 +45,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VtY1ZwyiONob",
-        "colab_type": "text"
+        "id": "UtvbgVm8FWVN"
       },
       "source": [
-        "### 熱伝導"
+        "### 熱伝導\n",
+        "Thermal conduction"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3clSDloyORCI",
-        "colab_type": "text"
+        "id": "VtY1ZwyiONob"
       },
       "source": [
-        "### 対流"
+        "### 対流\n",
+        "convection, convective heat transfer"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OK5_chVSOTAa",
-        "colab_type": "text"
+        "id": "OK5_chVSOTAa"
       },
       "source": [
         "### 熱放射"
