remove clab link

--- a/10_Oct/1402_熱の移動.ipynb
+++ b/10_Oct/1402_熱の移動.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1402_熱の移動.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+SIc+m6j8CYwY91kU0/No",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPeKIcFpUZ80HDtKjbWEfl5"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kzhkAKT/Phys2AKTuniv/blob/draft/10_Oct/1402_%E7%86%B1%E3%81%AE%E7%A7%BB%E5%8B%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -45,21 +34,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UtvbgVm8FWVN"
+        "id": "VtY1ZwyiONob"
       },
       "source": [
-        "### 熱伝導\n",
-        "Thermal conduction"
+        "### 熱伝導"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VtY1ZwyiONob"
+        "id": "3clSDloyORCI"
       },
       "source": [
-        "### 対流\n",
-        "convection, convective heat transfer"
+        "### 対流"
       ]
     },
     {
