add a video clips

--- a/10_Oct/1402_熱の移動.ipynb
+++ b/10_Oct/1402_熱の移動.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1402_熱の移動.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/xchdnCYrFIHmVINdxfxE",
+      "authorship_tag": "ABX9TyPjpQzlubc+IdiMrsQQPTRF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kzhkAKT/Phys2AKTuniv/blob/master/10_Oct/1402_%E7%86%B1%E3%81%AE%E7%A7%BB%E5%8B%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kzhkAKT/Phys2AKTuniv/blob/draft/10_Oct/1402_%E7%86%B1%E3%81%AE%E7%A7%BB%E5%8B%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,7 +48,9 @@
         "id": "VtY1ZwyiONob"
       },
       "source": [
-        "### 熱伝導"
+        "### 熱伝導\n",
+        "\n",
+        "DOI:10.1119/1.16358"
       ]
     },
     {
@@ -57,7 +59,13 @@
         "id": "ZdgQ2C_eGHKV"
       },
       "source": [
-        "thermal conduction"
+        "thermal conduction\n",
+        "\n",
+        "<!--\n",
+        "convective heat transfer https://en.wikipedia.org/wiki/Convective_heat_transfer#Convective_heat_transfer\n",
+        "\n",
+        "https://en.wikipedia.org/wiki/Heat_transfer_coefficient\n",
+        "-->"
       ]
     },
     {
@@ -75,7 +83,41 @@
         "id": "Si2uSxDjGMG6"
       },
       "source": [
-        "convection, convective heat transfer\""
+        "convection, convective heat transfer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O739iFABIFHH",
+        "cellView": "form",
+        "outputId": "de061a6e-29fa-44ed-9c70-bee2b02409d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 熱対流\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/hYFIlmOebWs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/hYFIlmOebWs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
