started explanation on Planck's law

--- a/10_Oct/1402_熱の移動.ipynb
+++ b/10_Oct/1402_熱の移動.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1402_熱の移動.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjpQzlubc+IdiMrsQQPTRF",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOdEKft5wREpZzbPA0eteth",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +52,18 @@
         "### 熱伝導\n",
         "\n",
         "DOI:10.1119/1.16358"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "th2olemXH3a-"
+      },
+      "source": [
+        "\\begin{align*}\n",
+        "H = \\dfrac{\\Delta Q}{\\Delta t}  = k A \\dfrac{T_2 - T_1}{L},\n",
+        "\\end{align*}\n",
+        "here $\\Delta t=t-t_0$."
       ]
     },
     {
@@ -102,7 +115,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/hYFIlmOebWs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -127,6 +140,148 @@
       },
       "source": [
         "### 熱放射"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0uXzxmnlJU5j"
+      },
+      "source": [
+        "thermal radiation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vt5srSkjZfDa",
+        "cellView": "form",
+        "outputId": "934e53d9-d6a1-4e91-8f9e-7c641d195df0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 電磁波としての熱放射\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/5GoZZKcNZiQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/5GoZZKcNZiQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PzfKVqn1K92Q",
+        "cellView": "form",
+        "outputId": "9947211c-c8c9-4845-87f0-5551014d26c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title Leslies's Cube 1/2\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ClRrU6JuBOc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ClRrU6JuBOc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jbVDrVYTJwWq",
+        "cellView": "form",
+        "outputId": "33ff5b97-3118-4682-ab8e-d5ac18460919",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title Leslies' cube 2/2\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/4Pz8xcEQtMU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/4Pz8xcEQtMU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_7Sz1fvhYCvT"
+      },
+      "source": [
+        "#### 波動と電磁波\n",
+        "\n",
+        "$v:$波の速さ, $\\lambda:$波長, $T:$周期, $f:$振動数\n",
+        "\\begin{align*}\n",
+        "v = \\dfrac{\\lambda}{T} = \\lambda \\cdot f,\n",
+        "\\end{align*}\n",
+        "\n",
+        "\n",
+        "$c:$光速(電磁波), $\\lambda:$波長, $f:振動数$\n",
+        "\\begin{align*}\n",
+        "c = \\lambda \\cdot \\nu,\n",
+        "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VUORFv3gaPRN"
+      },
+      "source": [
+        "#### ブランクの法則の裏側\n",
+        "\n",
+        "放射される(光子の)エネルギーを(偏光も含めて)[統計力学を利用して]数え上げる\n"
       ]
     }
   ]
