add answers for students' questions

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO16IFKAWSEEkV47ZrqaH15",
+      "authorship_tag": "ABX9TyO0wcv45ytPuW0+rb48XeCl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -472,7 +472,7 @@
         "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_\n",
         "en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,7 +507,7 @@
         "%%html\n",
         "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -573,7 +573,7 @@
         "%%html\n",
         "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -857,7 +857,9 @@
         "id": "92uBKw9HLRCi"
       },
       "source": [
-        "### 熱膨張"
+        "### 熱膨張\n",
+        "\n",
+        "[Thermal expansion](https://en.wikipedia.org/wiki/Thermal_expansion#Coefficient_of_thermal_expansion)"
       ]
     },
     {
@@ -1042,6 +1044,98 @@
         ">> $\\quad \\beta = 3 \\alpha$\n",
         "\n",
         "となります."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "637kb_PbvJZ9"
+      },
+      "source": [
+        "## 質問への回答"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fhVk3RROvRtY"
+      },
+      "source": [
+        "### SL<0 in P-T"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8YjLexdsvNEE",
+        "cellView": "form",
+        "outputId": "10d9d0aa-27e8-4ec7-946d-49b7fa6d5c16",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 330
+        }
+      },
+      "source": [
+        "#@title Density of water vs temperature at different pressures (in MPa) [DOI:10.1063/1.1851510]\n",
+        "%%html\n",
+        "<a href=\"https://www.researchgate.net/figure/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the_fig5_7991287\"><img src=\"https://www.researchgate.net/profile/Edgar_Zanotto/publication/7991287/figure/fig5/AS:279285362380808@1443598227359/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the.png\" alt=\"Density of water vs temperature at different pressures (in MPa) as specified in the figure (Ref. 27). The line crossing the curves obtained for different pressures specifies the location of the density maximum. At the left-hand side of this line, the thermal expansion coefficient is negative. To the right-hand side of this line, the thermal expansion coefficient is positive.\"/></a>"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<a href=\"https://www.researchgate.net/figure/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the_fig5_7991287\"><img src=\"https://www.researchgate.net/profile/Edgar_Zanotto/publication/7991287/figure/fig5/AS:279285362380808@1443598227359/Density-of-water-vs-temperature-at-different-pressures-in-MPa-as-specified-in-the.png\" alt=\"Density of water vs temperature at different pressures (in MPa) as specified in the figure (Ref. 27). The line crossing the curves obtained for different pressures specifies the location of the density maximum. At the left-hand side of this line, the thermal expansion coefficient is negative. To the right-hand side of this line, the thermal expansion coefficient is positive.\"/></a>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XrxCWU7Qv1Qy"
+      },
+      "source": [
+        "![Chemistry for Non-Majors](https://s3-us-west-2.amazonaws.com/courses-images-archive-read-only/wp-content/uploads/sites/53/2014/08/19212109/20140811155434493809.png)\n",
+        "\n",
+        "[Phase Diagram for Water on Chemistry for Non-Majors](https://courses.lumenlearning.com/cheminter/chapter/phase-diagram-for-water/)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xxSZM-cswZpm"
+      },
+      "source": [
+        "### 面膨張率"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K4XYsIZkwzxj"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "薄い正方形の金属片を用意し, 思考実験を行うと\n",
+        "\\begin{align*}\n",
+        "S \\cdot 1 &=L\\cdot L \\cdot 1\n",
+        "= (L_0 + \\alpha L_0 \\Delta T)^2 \\cdot 1 \n",
+        "= L_0^2 (1 + \\alpha \\Delta T)^2 \\cdot \n",
+        "\\approx  L_0^2 (1 + 2 \\alpha \\Delta T) \\cdot 1 &\\\\\n",
+        "&=  S_0 + 2\\alpha S_0 \\Delta T&\\\\\n",
+        "\\Delta S \\cdot 1 &=  (2 \\alpha) S_0 \\Delta T \\cdot 1.&\\\\\n",
+        "\\dfrac{\\Delta S \\cdot \\bcancel{1}}{S_0 \\Delta T \\cdot \\bcancel{1}} &= 2 \\alpha.&\n",
+        "\\end{align*}\n",
+        "ただし, 厚み方向は充分薄く線膨張が見えないものとした."
       ]
     }
   ]
