fixed during lecture

--- a/10_Oct/1501_熱力学の第１法則.ipynb
+++ b/10_Oct/1501_熱力学の第１法則.ipynb
@@ -6,8 +6,7 @@
       "name": "1501_熱力学の第１法則.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOrp1fUe9JR2Pmk+iaBPH9Q",
+      "authorship_tag": "ABX9TyPzB82bcxfBYU6/fXy8k8Ps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -775,7 +774,7 @@
         "\n",
         "plt.plot([5/4,3*5/4],[4,4], color='m')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -888,7 +887,7 @@
         "\n",
         "plt.plot([4,4],[5/4,3*5/4])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1017,7 +1016,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z4JLdIHKL7Oo"
+        "id": "SEWPcDD0oWk8"
       },
       "source": [
         "$\\require{cancel}$\n",
@@ -1049,33 +1048,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SEWPcDD0oWk8"
+        "id": "wXs03g4Wr7YK"
       },
       "source": [
-        "$\\require{cancel}$\n",
-        "ここで変化の間隔を短く($\\Delta{T},\\Delta{V}\\to 0$)すると, 定積分の考え方が利用でき\n",
-        "\\begin{align*}\n",
-        "\\dfrac{C_V}{R} \\int_{i}^{f}\\dfrac{{\\rm d}{T}}T \n",
-        "+ \\int_{i}^{f}\\dfrac{{\\rm d}{V}}V =0&\n",
-        "\\end{align*}\n",
-        "これを解けば\n",
-        "\\begin{align*}\n",
-        "\\dfrac{C_V}{R} \\ln \\dfrac{T_f}{T_i}\n",
-        "+ \\ln \\dfrac{V_f}{V_i} =0\\\\\n",
-        "\\ln \\left( \\dfrac{T_f}{T_i}\\right)^{\\frac{C_V}{R}}\n",
-        "+ \\ln \\dfrac{V_f}{V_i} =0\\\\\n",
-        "\\ln \\left( \\dfrac{T_f}{T_i}\\right)^{\\frac{C_V}{R}} \\cdot \\dfrac{V_f}{V_i} =0&\\\\\n",
-        "\\left( \\dfrac{T_f}{T_i}\\right)^{\\frac{C_V}{R}} \\cdot \\dfrac{V_f}{V_i}  = 1&\\\\\n",
-        "\\left(\n",
-        "  \\dfrac{T_f}{T_i}\n",
-        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}} \n",
-        "\\right)^{\\frac{C_V}{R}} &=1&\\\\\n",
-        "  \\dfrac{T_f}{T_i}\n",
-        "  \\left(\\dfrac{V_f}{V_i}\\right)^{\\frac{R}{C_V}} &=1&\n",
-        "\\end{align*}\n",
-        "\n",
-        "\n",
-        "\n"
+        "one more step.."
       ]
     },
     {
@@ -1345,7 +1321,7 @@
         "%%html\n",
         "<iframe src=\"https://phet.colorado.edu/sims/html/diffusion/latest/diffusion_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
