changed after lecture

--- a/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
+++ b/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1404_ファンデルワールスの状態方程式.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcSDmHJH+lAxePSs+n6g3b",
+      "authorship_tag": "ABX9TyNS8wh6tYYMyI5RCtg/lCir",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -96,7 +96,7 @@
         "&\\begin{cases}\n",
         "V_{\\rm ideal} < V_{\\rm real}: \n",
         "&\\quad V_{\\rm ideal} + b \\dfrac{n}{V} = V_{\\rm real}\\\\\n",
-        "p_{\\rm real} > p_{\\rm ideal}: \n",
+        "p_{\\rm ideal} > p_{\\rm real}: \n",
         "&\\quad p_{\\rm real} + a \\dfrac{n}{V} \\dfrac{n}{V} = p_{\\rm ideal}\\\\\n",
         "\\end{cases}\n",
         "\\end{align*}\n",
@@ -139,7 +139,7 @@
         "%%svg\n",
         "https://upload.wikimedia.org/wikipedia/commons/f/f1/MaxwellEqArea.svg"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -161,8 +161,19 @@
         "id": "VQffEiIGHKIj"
       },
       "source": [
-        "line ac: the saturated vaper, \b飽和水蒸気圧"
+        "line ac: the saturated vaper, \b飽和気圧"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9XZWs-1Ocdkd"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
