--- a/10_Oct/1502_理想気体のモル熱容量.ipynb
+++ b/10_Oct/1502_理想気体のモル熱容量.ipynb
@@ -6,7 +6,7 @@
       "name": "1502_理想気体のモル熱容量.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkOnG5mzhsM1aQHdnigDXm",
+      "authorship_tag": "ABX9TyMZO9+2cdmt9AOaMMXgi93J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -496,6 +496,68 @@
       },
       "source": [
         "> Q. 教科書 p177 の 問2 に取り組んでください"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zhSfBpydx_Pi"
+      },
+      "source": [
+        "#### 多原子分子のモル熱容量"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yl40sPi-yUVy"
+      },
+      "source": [
+        "多原子分子の自由度 $f$ が気体の内部エネルギー $U$ に影響するので\n",
+        "\\begin{align}\n",
+        "\\Delta U = f \\times \\dfrac{1}{2} k_{\\rm B} \\Delta T\n",
+        "\\end{align}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I9gLnVxmzGDI"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "1. 単原子原子分子の定積モル熱容量\n",
+        "  - 重心の自由度: $f=3$\n",
+        "なので\n",
+        "\\begin{align}\n",
+        "C_V &= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{V} \n",
+        "= \\dfrac{\\Delta U}{\\Delta T}\n",
+        "\\approx \\dfrac{\\cancelto{3}{f}}{2} R \n",
+        "= \\dfrac{3}{2} R \\approx 12.5 {\\rm\\  [J/K\\cdot mol]}\n",
+        "\\end{align}\n",
+        "\n",
+        "2. 2原子原子分子の定積モル熱容量\n",
+        "  - 重心の自由度: $f=3$\n",
+        "  - 回転軸の自由度: $f'=2$\n",
+        "なので\n",
+        "\\begin{align}\n",
+        "C_V &= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{V} \n",
+        "= \\dfrac{\\Delta U}{\\Delta T}\n",
+        "\\approx \\dfrac{\\cancelto{3}{f}}{3} R \n",
+        "= \\dfrac{5}{2} R \n",
+        "\\end{align}\n",
+        "\n",
+        "2. 3原子原子分子の定積モル熱容量\n",
+        "  - 重心の自由度: $f=3$\n",
+        "  - 回転軸の自由度: $f'=2$\n",
+        "  - 中心原子以外の距離: $f''=1$\n",
+        "なので\n",
+        "\\begin{align}\n",
+        "C_V &= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{V} \n",
+        "= \\dfrac{\\Delta U}{\\Delta T}\n",
+        "\\approx \\dfrac{\\cancelto{3+2+1}{f}}{3} R \n",
+        "= \\dfrac{6}{2} R =  3 R \n",
+        "\\end{align}"
       ]
     }
   ]
