Colaboratory を使用して作成しました

--- a/10_Oct/1502_理想気体のモル熱容量.ipynb
+++ b/10_Oct/1502_理想気体のモル熱容量.ipynb
@@ -6,7 +6,8 @@
       "name": "1502_理想気体のモル熱容量.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZO9+2cdmt9AOaMMXgi93J",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO8UR2ZWyQGPOCihhurDyYi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,8 +550,7 @@
         "\n",
         "2. 3原子原子分子の定積モル熱容量\n",
         "  - 重心の自由度: $f=3$\n",
-        "  - 回転軸の自由度: $f'=2$\n",
-        "  - 中心原子以外の距離: $f''=1$\n",
+        "  - 回転軸の自由度: $f'=2+1$\n",
         "なので\n",
         "\\begin{align}\n",
         "C_V &= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{V} \n",
@@ -558,6 +558,77 @@
         "\\approx \\dfrac{\\cancelto{3+2+1}{f}}{3} R \n",
         "= \\dfrac{6}{2} R =  3 R \n",
         "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qrJ8aAqYxUKB"
+      },
+      "source": [
+        "#### 多原子分子のおけるマイヤーの法則\n",
+        "\n",
+        "- 理想気体として扱えば $C_p -C_V =R$ が成り立つ\n",
+        "- 理想気体から外れたり、液体を考えれば $C_p \\geqq C_V$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dy2Dx7-Uze_O"
+      },
+      "source": [
+        "単原子の理想気体ほどハッキリとした"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VNb5hFf-vEWF"
+      },
+      "source": [
+        "### デュロン-プティの法則"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nXS-bsSMvw-Z"
+      },
+      "source": [
+        "1819yr\n",
+        "\n",
+        "![https://en.wikipedia.org/wiki/Pierre_Louis_Dulong](https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Pierre_Louis_Dulong.jpg/182px-Pierre_Louis_Dulong.jpg)\n",
+        "![](https://upload.wikimedia.org/wikipedia/commons/7/7a/Alexis_Th%C3%A9r%C3%A8se_Petit.jpg)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q8G2CY2ww8Cl"
+      },
+      "source": [
+        "#### 実在物質のモル熱容量 at 25 ℃\n",
+        "\n",
+        "![https://en.wikipedia.org/wiki/Dulong%E2%80%93Petit_law](https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/GraphHeatCapacityOfTheElementsI2s.png/784px-GraphHeatCapacityOfTheElementsI2s.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MEJLar4l0rIo"
+      },
+      "source": [
+        "#### 古典的な表現と量子論的な表現の違い"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l84PdoONxEyd"
+      },
+      "source": [
+        "![https://ja.wikipedia.org/wiki/%E3%83%87%E3%83%A5%E3%83%AD%E3%83%B3%EF%BC%9D%E3%83%97%E3%83%86%E3%82%A3%E3%81%AE%E6%B3%95%E5%89%87](https://upload.wikimedia.org/wikipedia/commons/5/54/DebyeVSEinstein.jpg)"
       ]
     }
   ]
